--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,39 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.tigeroakes.cellwallclient">
+  xmlns:tools="http://schemas.android.com/tools"
+  package="com.tigeroakes.cellwallclient">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.INTERNET" />
 
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:networkSecurityConfig="@xml/network_security_config"
-        android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".WebActivity"
-            android:launchMode="singleTop">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+  <application
+    android:allowBackup="true"
+    android:icon="@mipmap/ic_launcher"
+    android:label="@string/app_name"
+    android:networkSecurityConfig="@xml/network_security_config"
+    android:supportsRtl="true"
+    android:theme="@style/AppTheme"
+    tools:ignore="GoogleAppIndexingWarning">
+    <activity
+      android:name=".ui.login.LoginActivity"
+      android:label="@string/title_activity_login"
+      android:theme="@style/AppTheme.NoActionBar"></activity>
+    <activity
+      android:name=".WebActivity"
+      android:launchMode="singleTop">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
 
-            <intent-filter>
-                <action android:name="com.tigeroakes.cellwallclient.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+      <intent-filter>
+        <action android:name="com.tigeroakes.cellwallclient.VIEW" />
 
-                <data android:scheme="http" />
-                <data android:scheme="https" />
-                <data android:scheme="javascript" />
-            </intent-filter>
+        <category android:name="android.intent.category.DEFAULT" />
 
-            <intent-filter>
-                <action android:name="com.tigeroakes.cellwallclient.RELOAD" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-    </application>
+        <data android:scheme="http" />
+        <data android:scheme="https" />
+        <data android:scheme="javascript" />
+      </intent-filter>
+      <intent-filter>
+        <action android:name="com.tigeroakes.cellwallclient.RELOAD" />
+
+        <category android:name="android.intent.category.DEFAULT" />
+      </intent-filter>
+    </activity>
+  </application>
 
 </manifest>
