--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -27,23 +27,16 @@
         <data android:scheme="http" />
         <data android:scheme="https" />
       </intent-filter>
+      <intent-filter>
+        <action android:name="com.tigeroakes.cellwallclient.DISPLAY" />
+      </intent-filter>
     </activity>
     <activity
-      android:name=".WebActivity"
-      android:launchMode="singleTop">
+      android:name=".ui.MainActivity"
+      android:label="@string/app_name_main"
+      android:theme="@style/AppTheme.NoActionBar">
       <intent-filter>
-        <action android:name="com.tigeroakes.cellwallclient.VIEW" />
-
-        <category android:name="android.intent.category.DEFAULT" />
-
-        <data android:scheme="http" />
-        <data android:scheme="https" />
-        <data android:scheme="javascript" />
-      </intent-filter>
-      <intent-filter>
-        <action android:name="com.tigeroakes.cellwallclient.RELOAD" />
-
-        <category android:name="android.intent.category.DEFAULT" />
+        <action android:name="com.tigeroakes.cellwallclient.DISPLAY" />
       </intent-filter>
     </activity>
   </application>
