--- a/javascript/cells/package.json
+++ b/javascript/cells/package.json
@@ -1,38 +1,24 @@
 {
-  "name": "@cell-wall/server",
-  "version": "3.0.0",
+  "name": "@cell-wall/cells",
+  "version": "1.0.0",
   "private": true,
   "main": "src/index.js",
   "types": "src/index.d.ts",
   "scripts": {
     "build": "tsc --build src",
     "format": "prettier **/*.json **/*.ts --write",
-    "start": "node src/index.js",
     "pretest": "tsc --build test",
     "test": "ava"
   },
   "dependencies": {
-    "@cell-wall/android-bridge": "*",
-    "@cell-wall/cells": "*",
-    "fastify": "^3.7.0",
-    "fastify-formbody": "^5.0.0",
-    "socket.io": "^2.3.0",
     "tslib": "^2.0.1"
   },
   "devDependencies": {
-    "@types/socket.io": "^2.1.11",
-    "@types/yargs-parser": "^15.0.0",
     "ava": "^3.13.0",
     "prettier": "^2.1.2",
     "typescript": "4.1.0-beta"
   },
   "files": [
     "src"
-  ],
-  "ava": {
-    "files": [
-      "test/**/*",
-      "!test/mocks"
-    ]
-  }
+  ]
 }
