--- a/javascript/server/src/tsconfig.json
+++ b/javascript/server/src/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "../../tsconfig.base.json",
   "include": ["**/*.ts"],
-  "references": [{ "path": "../../android-bridge/src" }]
+  "references": [
+    { "path": "../../android-bridge/src" },
+    { "path": "../../cells/src" }
+  ]
 }
