--- a/javascript/tsconfig.json
+++ b/javascript/tsconfig.json
@@ -3,6 +3,8 @@
   "references": [
     { "path": "android-bridge/src" },
     { "path": "android-bridge/test" },
+    { "path": "cells/src" },
+    { "path": "cells/test" },
     { "path": "server/src" },
     { "path": "server/test" }
   ]
