--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
     <activity
       android:name=".ui.MainActivity"
       android:label="@string/app_name_main"
+      android:launchMode="singleTop"
       android:theme="@style/AppTheme.NoActionBar">
       <intent-filter>
         <action android:name="com.tigeroakes.cellwallclient.DISPLAY" />
