--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -55,35 +55,19 @@ protobuf {
 
 
 dependencies {
-  implementation 'androidx.legacy:legacy-support-v4:1.0.0'
   implementation 'com.google.android.material:material:1.2.1'
-  def nav_version = "2.3.1"
 
-  implementation fileTree(dir: 'libs', include: ['*.jar'])
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
   implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.0'
 
-  implementation "androidx.activity:activity-ktx:1.2.0-beta01"
-  implementation 'androidx.appcompat:appcompat:1.3.0-alpha02'
-  implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+  implementation 'androidx.appcompat:appcompat:1.2.0'
   implementation 'androidx.core:core-ktx:1.3.2'
   implementation "androidx.datastore:datastore-core:$datastore_version"
-  implementation 'androidx.fragment:fragment-ktx:1.3.0-beta01'
   implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-  implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-  implementation "androidx.preference:preference-ktx:1.1.1"
   implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-  implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
   implementation "com.google.protobuf:protobuf-javalite:3.10.0"
-  implementation "com.squareup.moshi:moshi-adapters:1.8.0"
-  implementation "com.squareup.moshi:moshi-kotlin:1.8.0"
   implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-  implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
-  implementation('io.socket:socket.io-client:1.0.0') {
-    // excluding org.json which is provided by Android
-    exclude group: 'org.json', module: 'json'
-  }
 
   testImplementation 'junit:junit:4.12'
   testImplementation 'org.mockito:mockito-core:2.24.5'
