--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
 		"preview": "svelte-kit preview",
+		"start": "node node/server.js",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
@@ -17,14 +18,18 @@
 		"appium-adb": "^8.16.0",
 		"dotenv": "^10.0.0",
 		"googleapis": "^87.0.0",
-		"lodash.startcase": "^4.4.0"
+		"lodash.startcase": "^4.4.0",
+		"polka": "^0.5.2",
+		"ws": "^8.2.2"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-node": "next",
 		"@sveltejs/kit": "next",
 		"@types/lodash.startcase": "^4.4.6",
 		"@types/node": "^16.10.1",
+		"@types/polka": "^0.5.3",
 		"@types/semver": "^7.3.8",
+		"@types/ws": "^8.2.0",
 		"@typescript-eslint/eslint-plugin": "^4.32.0",
 		"@typescript-eslint/parser": "^4.32.0",
 		"esbuild-jest": "^0.5.0",
@@ -32,8 +37,8 @@
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
 		"jest": "^27.2.3",
-		"prettier": "~2.4.1",
 		"lowdb": "^3.0.0",
+		"prettier": "~2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
 		"svelte": "^3.43.0",
 		"svelte-check": "^2.2.6",
