--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,24 +33,26 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 6.x.x
 
       # Install dependencies
       - uses: actions/setup-node@v2
         with:
           node-version: "16"
-          cache: npm
-          cache-dependency-path: server/package-lock.json
-      - run: npm ci
-        if: steps.cache.outputs.cache-hit != 'true'
+          cache: pnpm
+          cache-dependency-path: server/pnpm-lock.yaml
+      - run: pnpm install --frozen-lockfile
 
       # Validate the source code
-      - run: npm run lint
-      - run: npm run check
-      - run: npm run test
+      - run: pnpm run lint
+      - run: pnpm run check
+      - run: pnpm run test
 
       # Build production code
-      - run: npm run build
-      - run: cp ./{package.json,package-lock.json,.gitignore} ./build
+      - run: pnpm run build
+      - run: cp ./{package.json,pnpm-lock.yaml,.gitignore} ./build
 
       # Publish the code
       - name: deploy to branch
