--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,10 @@
 	},
 	"dependencies": {
 		"@js-temporal/polyfill": "^0.2.0",
-		"appium-adb": "^8.16.0",
+		"appium-adb": "^8.16.1",
 		"dotenv": "^10.0.0",
-		"googleapis": "^87.0.0",
+		"googleapis": "^88.2.0",
+		"jimp": "^0.16.1",
 		"lodash.startcase": "^4.4.0",
 		"lowdb": "^3.0.0",
 		"polka": "^0.5.2",
@@ -26,7 +27,7 @@
 		"@sveltejs/adapter-node": "next",
 		"@sveltejs/kit": "next",
 		"@types/lodash.startcase": "^4.4.6",
-		"@types/node": "^16.10.1",
+		"@types/node": "^16.10.2",
 		"@types/polka": "^0.5.3",
 		"@types/semver": "^7.3.8",
 		"@types/ws": "^8.2.0",
@@ -36,12 +37,12 @@
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
-		"jest": "^27.2.3",
+		"jest": "^27.2.4",
 		"prettier": "~2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
-		"svelte": "^3.43.0",
+		"svelte": "^3.43.1",
 		"svelte-check": "^2.2.6",
-		"svelte-preprocess": "^4.9.5",
+		"svelte-preprocess": "^4.9.7",
 		"tslib": "^2.3.1",
 		"typescript": "^4.4.3"
 	}
