--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,9 +1,9 @@
 plugins {
   id 'com.android.application'
   id 'kotlin-android'
-  id 'kotlin-android-extensions'
   id "androidx.navigation.safeargs.kotlin"
   id "com.getkeepsafe.dexcount" version "2.0.0"
+  id "com.google.protobuf" version "0.8.17"
 }
 
 android {
@@ -40,6 +40,26 @@ android {
   }
 }
 
+protobuf {
+  protoc {
+    artifact = "com.google.protobuf:protoc:3.10.0"
+  }
+
+  // Generates the java Protobuf-lite code for the Protobufs in this project. See
+  // https://github.com/google/protobuf-gradle-plugin#customizing-protobuf-compilation
+  // for more information.
+  generateProtoTasks {
+    all().each { task ->
+      task.builtins {
+        java {
+          option 'lite'
+        }
+      }
+    }
+  }
+}
+
+
 dependencies {
   implementation "com.google.android.material:material:$material_version"
 
@@ -49,23 +69,25 @@ dependencies {
 
   implementation "androidx.appcompat:appcompat:$appcompat_version"
   implementation "androidx.core:core-ktx:$core_version"
+  implementation "androidx.datastore:datastore:$datastore_version"
+  implementation "androidx.datastore:datastore-core:$datastore_version"
   implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
   implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
 
-  implementation "com.github.tfcporciuncula.flow-preferences:flow-preferences:1.3.3"
+  implementation "com.google.protobuf:protobuf-javalite:3.10.0"
   implementation "com.squareup.retrofit2:retrofit:2.9.0"
   implementation "org.mozilla.geckoview:geckoview:$geckoview_version"
 
-  testImplementation "junit:junit:4.13.1"
-  testImplementation "io.mockk:mockk:1.10.3-jdk8"
-  testImplementation 'org.robolectric:robolectric:4.4'
-  testImplementation "androidx.test:core-ktx:1.3.0"
-  testImplementation "androidx.test:runner:1.3.0"
-  testImplementation "androidx.test.ext:junit-ktx:1.1.2"
+  testImplementation "junit:junit:4.13.2"
+  testImplementation "io.mockk:mockk:1.12.0"
+  testImplementation 'org.robolectric:robolectric:4.6.1'
+  testImplementation "androidx.test:core-ktx:$core_test_version"
+  testImplementation "androidx.test:runner:$runner_version"
+  testImplementation "androidx.test.ext:junit-ktx:$junit_ktx_version"
 
-  androidTestImplementation "androidx.test:core-ktx:1.3.0"
-  androidTestImplementation "androidx.test:runner:1.3.0"
-  androidTestImplementation "androidx.test:rules:1.3.0"
-  androidTestImplementation "androidx.test.ext:junit-ktx:1.1.2"
-  androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
+  androidTestImplementation "androidx.test:core-ktx:$core_test_version"
+  androidTestImplementation "androidx.test:runner:$runner_version"
+  androidTestImplementation "androidx.test:rules:1.4.0"
+  androidTestImplementation "androidx.test.ext:junit-ktx:$junit_ktx_version"
+  androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
 }
