--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,15 +3,18 @@
 buildscript {
   ext {
     geckoview_version = '82.0.20201108180448'
-    kotlin_version = '1.4.20'
-    coroutines_version = '1.4.1'
-    appcompat_version = '1.2.0'
-    core_version = '1.5.0-alpha05'
-    nav_version = '2.3.2'
-    material_version = '1.2.1'
-    datastore_version = '1.0.0-alpha02'
-    lifecycle_version = '2.3.0-beta01'
+    kotlin_version = '1.5.0'
+    coroutines_version = '1.5.0'
+    appcompat_version = '1.3.1'
+    core_version = '1.6.0'
+    core_test_version = '1.4.0'
+    datastore_version = '1.0.0'
+    junit_ktx_version = '1.1.3'
+    nav_version = '2.3.5'
+    material_version = '1.4.0'
+    lifecycle_version = '2.3.1'
     scarlet_version = '0.1.11'
+    runner_version = '1.4.0'
   }
   repositories {
     google()
