--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
   id 'com.android.application'
   id 'kotlin-android'
   id "androidx.navigation.safeargs.kotlin"
-  id "com.getkeepsafe.dexcount" version "2.0.0"
+  id "com.getkeepsafe.dexcount" version "3.0.1"
   id "com.google.protobuf" version "0.8.17"
 }
 
@@ -12,8 +12,8 @@ android {
     applicationId "com.tigeroakes.cellwall.client"
     minSdkVersion 19
     targetSdkVersion 30
-    versionCode 4
-    versionName "2.2"
+    versionCode 5
+    versionName "3.0"
     testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
   }
   buildTypes {
@@ -38,11 +38,14 @@ android {
     jvmTarget = '1.8'
     freeCompilerArgs += "-Xopt-in=kotlin.RequiresOptIn"
   }
+  lintOptions {
+    checkDependencies true
+  }
 }
 
 protobuf {
   protoc {
-    artifact = "com.google.protobuf:protoc:3.10.0"
+    artifact = "com.google.protobuf:protoc:$protobuf_version"
   }
 
   // Generates the java Protobuf-lite code for the Protobufs in this project. See
@@ -74,7 +77,7 @@ dependencies {
   implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
   implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
 
-  implementation "com.google.protobuf:protobuf-javalite:3.10.0"
+  implementation "com.google.protobuf:protobuf-javalite:$protobuf_version"
   implementation "com.squareup.retrofit2:retrofit:2.9.0"
   implementation "org.mozilla.geckoview:geckoview:$geckoview_version"
 
