--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,25 +3,26 @@
 buildscript {
   ext {
     geckoview_version = '93.0.20210927210923'
-    kotlin_version = '1.5.0'
+    kotlin_version = '1.5.20'
     coroutines_version = '1.5.0'
     appcompat_version = '1.3.1'
     core_version = '1.6.0'
     core_test_version = '1.4.0'
     datastore_version = '1.0.0'
     junit_ktx_version = '1.1.3'
-    nav_version = '2.3.5'
     material_version = '1.4.0'
+    nav_version = '2.3.5'
+    protobuf_version = '3.10.0'
     lifecycle_version = '2.3.1'
     scarlet_version = '0.1.11'
     runner_version = '1.4.0'
   }
   repositories {
     google()
-    jcenter()
+    mavenCentral()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:4.1.0'
+    classpath 'com.android.tools.build:gradle:7.0.2'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     // NOTE: Do not place your application dependencies here; they belong
@@ -32,7 +33,7 @@ buildscript {
 allprojects {
   repositories {
     google()
-    jcenter()
+    mavenCentral()
     maven { url "https://maven.mozilla.org/maven2/" }
   }
 }
