--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -17,5 +17,6 @@ org.gradle.jvmargs=-Xmx1536m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+android.jetifier.ignorelist=bcprov-jdk15on
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
