--- a/javascript/client/package.json
+++ b/javascript/client/package.json
@@ -6,7 +6,7 @@
 	"exports": "./build/middlewares.js",
 	"module": "./build/middlewares.js",
 	"scripts": {
-		"dev": "svelte-kit dev",
+		"dev": "svelte-kit dev --port 3001",
 		"build": "svelte-kit build",
 		"preview": "svelte-kit preview",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
